Add ability to create user posts (not yet displayed)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,5 @@
 body {
-    /* background: #fafafa; */
-    background: red;
+    background: #fafafa;
     padding-top: 50px;
     font-family: "Nunito", sans-serif;
 }
