--- a/templates/profile.html
+++ b/templates/profile.html
@@ -112,7 +112,7 @@
                                 <!-- ROW 1 -->
                                 <div class="card-header px-2">
                                     <h5>
-                                        <img src="https://res.cloudinary.com/cloud9wastaken/image/upload/v1659644976/media/default-user_vltu5x.jpg" class="post-avatar avatar"
+                                        <img src="{% static '/images/default-user.jpg' %}" class="post-avatar avatar"
                                             aria-labelledby="post-user-full-name">
                                         <a href="#" id="post-user-full-name">Firstname Lastname</a>
                                     </h5>
@@ -194,5 +194,6 @@
                 </div>
             </div>
         </div>
+        <!-- End Add History Modal -->
     </section>
     {% endblock content %}
