--- a/templates/index.html
+++ b/templates/index.html
@@ -3,24 +3,41 @@
 
 {% block content %}
 <section class="container">
+    {% for post in posts reversed %}
 <!-- Post Template: -->
-    <div class="card mt-4 mb-2 shadow rounded">
+    <div class="card mt-4 mb-2 shadow rounded container">
         <!-- ROW 1 -->
-        <div class="card-header px-2">
-            <h5>
-                <img src="https://res.cloudinary.com/cloud9wastaken/image/upload/v1659644976/media/default-user_vltu5x.jpg" class="post-avatar avatar" aria-labelledby="post-user-full-name">
-                <a href="#" id="post-user-full-name">Firstname Lastname</a>
-            </h5>
-        </div>
+        <a href="/profile/{{post.user}}" aria-label="Open user's profile">
+            <div class="card-header px-2 row align-items-center">
+                <div class="col-4 col-md-2 col-lg-1">
+                    <img src="{{ user_profile.avatar.url }}" class="post-avatar avatar img-fluid" aria-labelledby="post-user-full-name">
+                </div>
+                <div class="col-8 col-md-10 col-lg-11">
+                    <div class="row d-flex justify-content-between">
+                        <h5 class="col-12 col-md-6">{{ user_profile.first_name }} {{ user_profile.last_name }}</h5>
+                        <h5 class="col-12 col-md-6 text-right">(@{{ post.user }})</h5>
+                    </div>
+                </div>
+            </div>
+        </a>
+            
+            <!-- <img src="{{ user_profile.avatar.url }}" class="post-avatar avatar" aria-labelledby="post-user-full-name">
+            <h5 class="d-inline">{{ user_profile.first_name }} {{ user_profile.last_name }}</h5>
+            <h5 class="d-inline">(@{{ post.user }})</h5>
+            </a> -->
+
         <!-- ROW 2 (Image in post, if any) -->
-        <img class="card-img-top" src="" alt="" id="post-image">
+        {% if post.post_image %}
+        <img class="card-img-top" src="{{ post.post_image.url }}" alt="" id="post-image">
+        {% endif %}
         <!-- ROW 3 (Post date and written content) -->
         <div class="card-body">
-            <p class="text-right" id="post-date">xx/xx/xxxx</p>
-            <p class="card-text" id="post-text">Written post content goes here. Written post content goes here. Written post content goes here. Written post content goes here. Written post content goes here. Written post content goes here.</p>
+            <p class="text-right" id="post-date">{{ post.created_at }}</p>
+            <p class="card-text" id="post-text">{{ post.post_text }} </p>
             <div class="card-footer">
                 <div class="row justify-content-between">
-                    <div class="col-4 col-md-4">Like</div>
+                    <div class="col-4 col-md-4">
+                        <a href="/post-applause?post_id={{ post.id }}"><i class="fas fa-sign-language"></i></a> {{ post.no_of_applause }} applause</div>
                     <div class="col-6 col-md-4 text-center px-0">Comments</div>
                     <div class="col-2 col-md-4 text-right"><i class="fas fa-chevron-down"></i>
                     <!-- Options may include:
@@ -30,5 +47,6 @@
             </div>
         </div>
     </div> <!-- End of post template: -->
+    {% endfor %}
 </section>
 {% endblock content %}
