--- a/templates/profile.html
+++ b/templates/profile.html
@@ -51,9 +51,9 @@
 </section> <!-- End of Profile Header -->
 <!-- Profile Body -->
 <div class="container">
-    <!-- HISTORY -->
     <section class="container-fluid">
         <div class="row">
+            <!-- HISTORY -->
             <div class="col-12 col-md-5 order-2 order-md-1">
                 <div class="row">
                     <div class="col-12">
@@ -91,54 +91,60 @@
             </div>
             <div class="col-12 col-md-7 order-1 order-md-2">
                 <div class="container-fluid">
-                    <!-- Bio -->
+                    <!-- BIO -->
                     <div class="row">
                         <h3 class="mb-3 text-uppercase">Bio</h3>
                     </div>
                     <div class="row">
                         <p>{{user_profile.bio}}</p>
                     </div>
-                    <!-- Posts -->
+                    <!-- POSTS -->
                     <div class="row">
                         <h3 class="mb-3 text-uppercase">
-                            Posts
+                            {{ num_user_posts }} Posts
                         </h3>
                     </div>
-                    <!-- if posts: for post in posts: -->
-                    <div class="row">
-                        <div class="col-12 px-0">
-                            <!-- Post Template: -->
-                            <div class="card mt-2 mb-3 mx-0 shadow rounded">
-                                <!-- ROW 1 -->
-                                <div class="card-header px-2">
-                                    <h5>
-                                        <img src="{% static '/images/default-user.jpg' %}" class="post-avatar avatar"
-                                            aria-labelledby="post-user-full-name">
-                                        <a href="#" id="post-user-full-name">Firstname Lastname</a>
-                                    </h5>
+                    {% if num_user_posts > 0 %}
+                    {% for post in user_posts %}
+                    <!-- Post Template: -->
+                    <div class="card mt-4 mb-2 shadow rounded container">
+                        <!-- ROW 1 -->
+                        <a href="/profile/{{post.user}}" aria-label="Open user's profile">
+                            <div class="card-header px-2 row align-items-center">
+                                <div class="col-4 col-md-2 col-lg-1">
+                                    <img src="{{ user_profile.avatar.url }}" class="post-avatar avatar img-fluid" aria-labelledby="post-user-full-name">
                                 </div>
-                                <!-- ROW 2 (Image in post, if any) -->
-                                <img class="card-img-top" src="" alt="" id="post-image">
-                                <!-- ROW 3 (Post date and written content) -->
-                                <div class="card-body">
-                                    <p class="text-right" id="post-date">xx/xx/xxxx</p>
-                                    <p class="card-text" id="post-text">Written post content goes here. Written post
-                                        content goes here. Written post content goes here. Written post content goes
-                                        here. Written post content goes here. Written post content goes here.</p>
-                                    <div class="card-footer">
-                                        <div class="row justify-between">
-                                            <div class="col-4 col-md-4">Like</div>
-                                            <div class="col-6 col-md-4 text-center px-0">Comments</div>
-                                            <div class="col-2 col-md-4 text-right"><i class="fas fa-chevron-down"></i>
-                                                <!-- Options may include:
-                                            share, edit, delete, disable comments, bookmark/save -->
-                                            </div>
-                                        </div>
+                                <div class="col-8 col-md-10 col-lg-11">
+                                    <div class="row d-flex justify-content-between">
+                                        <h5 class="col-12 col-md-6">{{ user_profile.first_name }} {{ user_profile.last_name }}</h5>
+                                        <h5 class="col-12 col-md-6 text-right">(@{{ post.user }})</h5>
                                     </div>
                                 </div>
                             </div>
-                        </div> <!-- end of post template -->
-                    </div> <!-- end of 'if posts, for post in posts' -->
+                        </a>
+                        <!-- ROW 2 (Image in post, if any) -->
+                        {% if post.post_image %}
+                        <img class="card-img-top" src="{{ post.post_image.url }}" alt="" id="post-image">
+                        {% endif %}
+                        <!-- ROW 3 (Post date and written content) -->
+                        <div class="card-body">
+                            <p class="text-right" id="post-date">{{ post.created_at }}</p>
+                            <p class="card-text" id="post-text">{{ post.post_text }} </p>
+                            <div class="card-footer">
+                                <div class="row justify-content-between">
+                                    <div class="col-4 col-md-4">
+                                        <a href="/post-applause?post_id={{ post.id }}"><i class="fas fa-sign-language"></i></a> {{ post.no_of_applause }} applause</div>
+                                    <div class="col-6 col-md-4 text-center px-0">Comments</div>
+                                    <div class="col-2 col-md-4 text-right"><i class="fas fa-chevron-down"></i>
+                                    <!-- Options may include:
+                                    share, edit, delete, disable comments, bookmark/save -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> <!-- End of post template: -->
+                    {% endfor %}
+                    {% endif %}
                 </div>
             </div>
         </div>
