--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,8 @@
             <div class="collapse navbar-collapse" id="nav-links">
                 <ul class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
-                    <li class="nav-item"><a href="#" class="nav-link" data-toggle="modal" data-target="#newPostModal"><i
-                                class="fas fa-plus-square d-none d-md-inline"></i> New Post</a></li>
+                    <!-- <li class="nav-item"><a href="#" class="nav-link" data-toggle="modal" data-target="#newPostModal"><i
+                                class="fas fa-plus-square d-none d-md-inline"></i> New Post</a></li> -->
                     <li class="nav-item"><a href="{% url 'settings' %}" class="nav-link"><i
                                 class="fas fa-cog d-none d-md-inline"></i> Settings</a></li>
                     <li class="nav-item"><a href="/profile/{{user.username}}" class="nav-link"><i
@@ -64,64 +64,10 @@
     </section>
     {% endif %}
 
-    <!-- Search bar -->
-    <section class="container-fluid mt-2">
-        <div class="row justify-content-center align-items-center">
-            <div class="col-10 col-md-6">
-                {% if user.is_authenticated %}
-                <form action="/search" method="POST">
-                    {% csrf_token %}
-                    <div class="input-group mb-1 mt-1">
-                        <input type="text" class="form-control" placeholder="Search users..."
-                            aria-label="Search users by name">
-                        <button class="btn btn-outline-secondary" type="submit" id="search-button"><i
-                                class="fas fa-search"></i></button>
-                    </div>
-                </form>
-                {% endif %}
-            </div>
-        </div>
-    </section>
-
     <!-- Main Content -->
     {% block content %}
     <!-- Content -->
     {% endblock content %}
-
-    <!-- BEGIN NEW POST MODAL -->
-    <div class="modal fade" id="newPostModal" tabindex="-1" role="dialog" aria-labelledby="addPostModalInner"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <form action="upload" method="POST"  enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="addHistoryModalInner">Create Public Post</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body row justify-content-center">
-                        <div class="col-12 mb-4">
-                            <!-- New Post: Text Area -->
-                            <label for="post-text"><i class="fas fa-pen-nib"></i> Text: </label>
-                            <textarea class="form-control mt-1 mb-2" rows="10" cols="50" name="post_text" id="post-text" placeholder="Write your post here, but keep it classy!"required></textarea>
-                        </div>
-                        <div class="col-12 mb-2">
-                            <!-- New Post: Image Area (optional) -->
-                            <label for="image-upload"><i class="fas fa-upload"></i> Upload Image (optional): </label>
-                            <input class="mt-1 mb-2 form-control-file" type="file" name="image_upload" id="image_upload" value="">
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary">Save changes</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- END OF NEW POST MODAL-->
 
     <!-- Footer -->
     <footer class="text-center">&copy;2022</footer>
