--- a/templates/profile.html
+++ b/templates/profile.html
@@ -123,7 +123,7 @@
                                     <div class="row d-flex justify-content-between">
                                         <h5>{{ post.user.profile.first_name }}
                                             {{ post.user.profile.last_name }}</h5>
-                                        <h5 class="text-right mr-2">(@{{ post.user }})</h5>
+                                        <h5 class="text-right mr-2"> @{{ post.user }}</h5>
                                     </div>
                                 </div>
                             </div>
